# RaplMail

./: .gitignore  CHANGELOG.md  LOGICAL_SWEEP.md  RAPLDESK_API_WISHLIST.md  README.md  ROADMAP.md  app-icon-concepts.html  build-desktop.ps1  build-desktop.sh  build-wasm.ps1  dev-app.ps1  dev-app.sh  dev.ps1  dev.sh  potential_features.md
.github/workflows/: build-macos.yml
backend/: .env.example  pyproject.toml  raplmail-backend.spec  requirements-dev.txt  requirements.txt  run.py
backend/app/: __init__.py  main.py
backend/app/api/: accounts.py  ai.py  avatars.py  calendar.py  compose.py  contacts.py  debug.py  deps.py  devicesync.py  folders.py  messages.py  metrics.py  rapldesk.py  rules.py  sandbox.py  security.py  settings.py  signatures.py  smime.py  subscriptions.py  track.py  unfurl.py  vault.py
backend/app/core/: atrest.py  certs.py  config.py  db.py  deepscan.py  logbuffer.py  security.py  threat.py  ws.py
backend/app/models/: __init__.py
backend/app/providers/: autodiscover.py  base.py  graph.py  imap_smtp.py  oauth.py  pool.py
backend/app/sync/: authcheck.py  caldav.py  categorize.py  compose.py  contacts.py  devicesync.py  embeddings.py  engine.py  extract.py  gcal.py  ics.py  pgp.py  rules.py  screening.py  smime.py  threading.py
backend/cli/: raplmail_cli.py
backend/tests/: conftest.py  test_api_e2e.py  test_atrest.py  test_backfill.py  test_caldav.py  test_caldav_write.py  test_calendar_events.py  test_compose_smoke.py  test_credsync.py  test_devicesync.py  test_embeddings.py  test_extract.py  test_inline_images.py  test_keyring_vault.py  test_live_mailbox.py  test_llm_actions.py  test_move.py  test_pgp.py  test_pgp_mime.py  test_receipt_pixel.py  test_rules_apply.py  test_rules_sync.py  test_screening.py  test_security_lab.py  test_smime.py  test_smime_chain.py  test_threading.py  test_undo_restore.py
frontend/: index.html  make_icon.py  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.macos.conf.json
frontend/src-tauri/capabilities/: default.json  sandbox.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/lib/: api.js  attachments.js  avatar.js  email.js  i18n.svelte.js  icons.js  keys.js  markdown.js  searchQuery.js  settingsIndex.js  sound.js  store.svelte.js  themes.js  time.js
frontend/src/lib/components/: AdvancedSearch.svelte  AiAssistant.svelte  AiInbox.svelte  AttachmentMenu.svelte  CalendarView.svelte  CommandPalette.svelte  Compose.svelte  ConfirmDialog.svelte  Dashboard.svelte  GoToPalette.svelte  GroupRow.svelte  MailList.svelte  MailMerge.svelte  MessageRow.svelte  NewsletterFeed.svelte  Onboarding.svelte  Reader.svelte  RecipientInput.svelte  ReminderWindow.svelte  RuleModal.svelte  SandboxWindow.svelte  ScheduledView.svelte  SearchBar.svelte  SearchPalette.svelte  SecurityLab.svelte  SendingIndicator.svelte  Settings.svelte  SettingsAccounts.svelte  SettingsAi.svelte  SettingsAliases.svelte  SettingsAppearance.svelte  SettingsCalendar.svelte  SettingsContacts.svelte  SettingsDebug.svelte  SettingsGeneral.svelte  SettingsPgp.svelte  SettingsRaplDesk.svelte  SettingsRules.svelte  SettingsSecurity.svelte  SettingsShortcuts.svelte  (+15 more)
frontend/src/lib/locales/: cs.js  en.js
frontend/src/lib/locales/parts/: ai.js  appearance.js  calendarView.js  cmd.js  compose.js  devicesync.js  goto.js  list.js  miscui.js  nav.js  reader.js  sandbox.js  search.js  security.js  settingsAccounts.js  settingsGeneral.js  settingsMisc.js  settingsNav.js  tickets.js
frontend/src/lib/sandbox/: analyzer.js  interceptor.js  wasm-blob.js
frontend/wasm/raplsandbox/: Cargo.toml  test-analyzer.mjs
frontend/wasm/raplsandbox/.cargo/: config.toml
frontend/wasm/raplsandbox/src/: lib.rs
