[project]
name = "raplmail-backend"
version = "0.1.0"
description = "RaplMail local mail client backend (FastAPI + IMAP/SMTP/OAuth sync engine)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.21",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "imapclient>=3.0",
    "orjson>=3.10",
    "mail-parser>=4.0",
    "msal>=1.28",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "cryptography>=42.0",
    "argon2-cffi>=23.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "dnspython>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pyinstaller>=6.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
