[package]
name = "raplmail"
version = "0.9.1"
description = "RaplMail desktop shell"
authors = ["RaplMail"]
edition = "2021"

[[bin]]
name = "raplmail"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

# WebView2 memory trimming (SetMemoryUsageTargetLevel). webview2-com / windows-core
# are crates Tauri already pulls in transitively, so this adds no new compiled crates.
[target."cfg(windows)".dependencies]
webview2-com = "0.38"
windows-core = "0.61"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
